// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`N8nInfoTip > should render correctly as note 1`] = `
"<div class="aura-info-tip infoTip info note bold">
  <!-- Note that the branching is required to support displaying
		 the slot either in the tooltip of the icon or following it --><span class="iconText"><aura-icon-stub icon="info" spin="false" color="text-base"></aura-icon-stub><span>Need help doing something?<a href="/docs" target="_blank">Open docs</a></span></span>
</div>"
`;

exports[`N8nInfoTip > should render correctly as tooltip 1`] = `
"<div class="aura-info-tip infoTip info tooltip bold">
  <!-- Note that the branching is required to support displaying
		 the slot either in the tooltip of the icon or following it --><span class="iconText el-tooltip__trigger el-tooltip__trigger"><aura-icon-stub icon="info" spin="false" color="text-base"></aura-icon-stub></span>
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`N8nInfoTip > should render correctly with a specific size 1`] = `
"<div class="aura-info-tip infoTip info note bold">
  <!-- Note that the branching is required to support displaying
		 the slot either in the tooltip of the icon or following it --><span class="iconText"><aura-icon-stub icon="info" size="large" spin="false" color="text-base"></aura-icon-stub><span>Need help doing something?<a href="/docs" target="_blank">Open docs</a></span></span>
</div>"
`;
